--- a/src/main/resources/com/chaoticencoder/imgEncrypt.fxml
+++ b/src/main/resources/com/chaoticencoder/imgEncrypt.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
@@ -25,7 +26,7 @@
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="imgOrigView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgOrigView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" smooth="false" />
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -35,7 +36,7 @@
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="imgCryptView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgCryptView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" smooth="false" />
                </children>
             </VBox>
             <VBox alignment="TOP_CENTER" prefHeight="200.0" prefWidth="100.0">
@@ -45,7 +46,10 @@
                         <Font size="25.0" />
                      </font>
                   </Label>
-                  <ImageView fx:id="imgDeCryptView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" />
+                  <ImageView fx:id="imgDeCryptView" fitHeight="400.0" fitWidth="400.0" pickOnBounds="true" preserveRatio="true" smooth="false">
+                     <viewport>
+                        <Rectangle2D />
+                     </viewport></ImageView>
                </children>
             </VBox>
          </children>
