--- a/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
+++ b/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="607.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.ControllerCryptGrayImg">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="14.0" prefHeight="67.0" prefWidth="187.0">
          <children>
@@ -56,7 +56,7 @@
       </HBox>
       <VBox alignment="TOP_CENTER" layoutX="237.0" layoutY="8.0" prefHeight="67.0" prefWidth="181.0">
          <children>
-            <Button fx:id="encryptBtn" alignment="TOP_CENTER" disable="true" mnemonicParsing="false" onAction="#onEncryptBtnClick" text="Шифровать" />
+            <Button fx:id="encryptBtn" alignment="TOP_CENTER" disable="true" mnemonicParsing="false" onAction="#onEncryptBtnClick" text="Шифровать + дешифровать" />
             <Button fx:id="decryptionBtn" disable="true" mnemonicParsing="false" onAction="#onDecryptionBtnClick" text="Дешифровать" />
          </children>
       </VBox>
