--- a/src/main/resources/com/chaoticencoder/analysisWindow.fxml
+++ b/src/main/resources/com/chaoticencoder/analysisWindow.fxml
@@ -34,9 +34,9 @@
             </HBox>
             <AnchorPane prefHeight="129.0" prefWidth="945.0">
                <children>
-                  <TextArea editable="false" layoutX="379.0" prefHeight="47.0" prefWidth="187.0" />
-                  <TextArea editable="false" layoutX="116.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
-                  <TextArea editable="false" layoutX="647.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
+                  <TextArea fx:id="comparisonTA" layoutX="379.0" prefHeight="47.0" prefWidth="187.0" />
+                  <TextArea fx:id="origTA" editable="false" layoutX="116.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
+                  <TextArea fx:id="cryptTA" editable="false" layoutX="647.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
                </children>
             </AnchorPane>
          </children>
