--- a/src/main/resources/com/chaoticencoder/analysisWindow.fxml
+++ b/src/main/resources/com/chaoticencoder/analysisWindow.fxml
@@ -12,7 +12,7 @@
    <children>
       <VBox prefHeight="619.0" prefWidth="945.0">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="612.0" prefWidth="939.0">
+            <HBox alignment="TOP_CENTER" prefHeight="485.0" prefWidth="945.0">
                <children>
                   <BarChart fx:id="BarCharLeft" alternativeRowFillVisible="false" legendVisible="false" prefHeight="448.0" prefWidth="457.0" verticalGridLinesVisible="false">
                      <xAxis>
@@ -32,11 +32,11 @@
                   </BarChart>
                </children>
             </HBox>
-            <AnchorPane prefHeight="129.0" prefWidth="945.0">
+            <AnchorPane prefHeight="113.0" prefWidth="945.0">
                <children>
-                  <TextArea fx:id="comparisonTA" layoutX="379.0" prefHeight="47.0" prefWidth="187.0" />
-                  <TextArea fx:id="origTA" editable="false" layoutX="116.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
-                  <TextArea fx:id="cryptTA" editable="false" layoutX="647.0" layoutY="47.0" prefHeight="47.0" prefWidth="187.0" />
+                  <TextArea fx:id="comparisonTA" editable="false" layoutX="379.0" prefHeight="47.0" prefWidth="187.0" />
+                  <TextArea fx:id="origTA" editable="false" layoutX="87.0" prefHeight="141.0" prefWidth="253.0" />
+                  <TextArea fx:id="cryptTA" editable="false" layoutX="616.0" prefHeight="141.0" prefWidth="253.0" />
                </children>
             </AnchorPane>
          </children>
