--- a/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
+++ b/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.geometry.Rectangle2D?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.ImageView?>
@@ -62,7 +63,8 @@
          </children>
       </VBox>
       <Button fx:id="analysisBtn" disable="true" layoutX="582.0" layoutY="534.0" mnemonicParsing="false" onAction="#onAnalysisBtnClick" text="Анализ" />
-      <TextField fx:id="generationCount" layoutX="1051.0" layoutY="48.0" text="1" />
-      <Label layoutX="1051.0" layoutY="24.0" text="Количество итераций:" />
+      <TextField fx:id="generationCount" layoutX="1042.0" layoutY="38.0" text="1" />
+      <Label layoutX="1042.0" layoutY="14.0" text="Количество итераций:" />
+      <CheckBox fx:id="switchControl" layoutX="1042.0" layoutY="73.0" mnemonicParsing="false" text="Управление хаосом" />
    </children>
 </AnchorPane>
