--- a/src/main/resources/com/chaoticencoder/analysisWindow.fxml
+++ b/src/main/resources/com/chaoticencoder/analysisWindow.fxml
@@ -3,33 +3,53 @@
 <?import javafx.scene.chart.BarChart?>
 <?import javafx.scene.chart.CategoryAxis?>
 <?import javafx.scene.chart.NumberAxis?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextArea?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.VBox?>
+<?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="628.0" prefWidth="945.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.ControllerAnalysisWindow">
+<AnchorPane prefHeight="626.0" prefWidth="945.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.ControllerAnalysisWindow">
    <children>
       <VBox prefHeight="619.0" prefWidth="945.0">
          <children>
-            <HBox alignment="TOP_CENTER" prefHeight="485.0" prefWidth="945.0">
+            <HBox alignment="TOP_CENTER" prefHeight="473.0" prefWidth="945.0">
                <children>
-                  <BarChart fx:id="BarCharLeft" alternativeRowFillVisible="false" legendVisible="false" prefHeight="448.0" prefWidth="457.0" verticalGridLinesVisible="false">
-                     <xAxis>
-                        <CategoryAxis endMargin="0.0" label="Интенсивность пикселя" prefHeight="48.0" prefWidth="373.0" side="BOTTOM" startMargin="0.0" />
-                     </xAxis>
-                     <yAxis>
-                        <NumberAxis label="Количество пикселей" prefHeight="310.0" prefWidth="51.0" side="LEFT" upperBound="0.0" />
-                     </yAxis>
-                  </BarChart>
-                  <BarChart fx:id="BarCharRight" alternativeRowFillVisible="false" legendVisible="false" prefHeight="447.0" prefWidth="495.0" verticalGridLinesVisible="false">
-                    <xAxis>
-                      <CategoryAxis endMargin="0.0" label="Интенсивность пикселя" prefHeight="50.0" prefWidth="411.0" side="BOTTOM" startMargin="0.0" />
-                    </xAxis>
-                    <yAxis>
-                      <NumberAxis label="Количество пикселей" prefHeight="310.0" prefWidth="51.0" side="LEFT" upperBound="0.0" />
-                    </yAxis>
-                  </BarChart>
+                  <VBox alignment="TOP_CENTER" prefHeight="478.0" prefWidth="530.0">
+                     <children>
+                        <Label alignment="TOP_CENTER" text="Оригинал">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <BarChart fx:id="BarCharLeft" alternativeRowFillVisible="false" legendVisible="false" prefHeight="447.0" prefWidth="470.0" verticalGridLinesVisible="false">
+                           <xAxis>
+                              <CategoryAxis endMargin="0.0" label="Интенсивность пикселя" prefHeight="48.0" prefWidth="373.0" side="BOTTOM" startMargin="0.0" />
+                           </xAxis>
+                           <yAxis>
+                              <NumberAxis label="Количество пикселей" prefHeight="310.0" prefWidth="51.0" side="LEFT" upperBound="0.0" />
+                           </yAxis>
+                        </BarChart>
+                     </children>
+                  </VBox>
+                  <VBox alignment="TOP_CENTER" prefHeight="478.0" prefWidth="531.0">
+                     <children>
+                        <Label text="Криптограмма">
+                           <font>
+                              <Font size="18.0" />
+                           </font>
+                        </Label>
+                        <BarChart fx:id="BarCharRight" alternativeRowFillVisible="false" legendVisible="false" prefHeight="447.0" prefWidth="484.0" verticalGridLinesVisible="false">
+                          <xAxis>
+                            <CategoryAxis endMargin="0.0" label="Интенсивность пикселя" prefHeight="50.0" prefWidth="411.0" side="BOTTOM" startMargin="0.0" />
+                          </xAxis>
+                          <yAxis>
+                            <NumberAxis label="Количество пикселей" prefHeight="310.0" prefWidth="51.0" side="LEFT" upperBound="0.0" />
+                          </yAxis>
+                        </BarChart>
+                     </children>
+                  </VBox>
                </children>
             </HBox>
             <AnchorPane prefHeight="113.0" prefWidth="945.0">
