--- a/src/main/resources/com/chaoticencoder/cryptText.fxml
+++ b/src/main/resources/com/chaoticencoder/cryptText.fxml
@@ -33,5 +33,6 @@
          </font>
       </Label>
       <TextArea fx:id="cryptAnalysis" editable="false" layoutX="651.0" layoutY="116.0" prefHeight="200.0" prefWidth="269.0" />
+      <Button fx:id="toImgBtn" alignment="TOP_CENTER" disable="true" layoutX="698.0" layoutY="348.0" mnemonicParsing="false" onAction="#onToImgBtnClick" text="Графическая интерпритация" />
    </children>
 </AnchorPane>
