--- a/src/main/resources/com/chaoticencoder/cryptColorImg.fxml
+++ b/src/main/resources/com/chaoticencoder/cryptColorImg.fxml
@@ -9,7 +9,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="608.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.ControllerCryptGrayImg">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="608.0" prefWidth="1220.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.chaoticencoder.ControllerCryptColorImg">
    <children>
       <VBox alignment="TOP_CENTER" layoutX="10.0" layoutY="14.0" prefHeight="67.0" prefWidth="187.0">
          <children>
