--- a/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
+++ b/src/main/resources/com/chaoticencoder/cryptGrayImg.fxml
@@ -67,5 +67,7 @@
          </font>
       </Button>
       <Button fx:id="toSettings" layoutX="1015.0" layoutY="23.0" mnemonicParsing="false" onAction="#onToSettingsBtnClick" text="Настроки криптографии" />
+      <Label fx:id="labelEncryptTime" layoutX="1041.0" layoutY="525.0" text="Время шифрования:" />
+      <Label fx:id="labelDecryptTime" layoutX="1028.0" layoutY="551.0" text="Время дешифрования:" />
    </children>
 </AnchorPane>
